# sleek-ui

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: build_documentation.yaml  static.yml
docs-content/en/: accessability.yaml  default-colors.yaml  how-to-use.yaml  theming.yaml
docs-content/en/structs/: option-data.yaml
docs-content/en/widgets/: button.yaml
docs-sleek-ui/: theming.md  widgets.md
docs-sleek-ui/widgets/: alert.md  breadcrumb.md  button-interface.md  button.md  card.md  center.md  checkbox.md  code.md  collapse.md  divider.md  floating-button.md  floating-icon-button.md  icon-button.md  icon.md  input-number.md  input.md  linear-progress.md  link.md  modal.md  notification.md  popover.md  radio-button.md  radio.md  select.md  slider.md  spinner.md  switch.md  tabs.md  tag.md  text.md  title.md  tooltip.md
docs/pkg/: README.md  package.json  sleek_ui_lib.d.ts  sleek_ui_lib.js  sleek_ui_lib_bg.wasm.d.ts
lang/: sleek-ui.pot
src/: lib.rs  main.rs  page_manager.rs
src/content/: mod.rs  raw_content.rs  structs.rs
ui/: app-logic.slint  app-window.slint
ui/components/: doc-title.slint  doc-widgets.slint  options-bar.slint  page-base.slint  page-manager.slint  sidebar.slint
ui/components/presentation/: button.slint  default-colors.slint
ui/logic/: documentation-logic.slint
ui/pages/: about.slint  accessability.slint  accessibility.slint  colors.slint  content-page.slint  controls.slint  data-display.slint  default-colors.slint  feedback.slint  home.slint  how-to-use.slint  navigation.slint  page-index.slint  settings.slint  theming.slint
ui/pages/structs/: option-data.slint
ui/pages/widgets/: alert.slint  breadcrumb.slint  button-interface.slint  button.slint  card.slint  checkbox.slint  circle-progress.slint  code.slint  collapse.slint  divider.slint  floating-button.slint  floating-icon-button.slint  icon-button.slint  icon.slint  inline-code.slint  input-number.slint  input.slint  line-progress.slint  linear-progress.slint  link.slint  menu-group-title.slint  menu-how-to.slint  menu-link.slint  menu-submenu.slint  menu.slint  modal.slint  notification.slint  popover.slint  radio-button.slint  radio.slint  scrollview.slint  select.slint  slider.slint  spinner.slint  switch.slint  tabs.slint  tag.slint  text.slint  title.slint  tooltip.slint
ui/sleek-ui/: app-theme.slint  colors.slint  theme-colors.slint  theme-config.slint  widget-themes.slint  widgets.slint
ui/sleek-ui/app-theme-colors/: calendula-gold.slint  cyan.slint  daybreak-blue.slint  dust-red.slint  geek-blue.slint  golden-purple.slint  lime.slint  magenta.slint  polar-green.slint  sunrise-yellow.slint  (+3 more)
ui/structs/: doc-content.slint
wasm-doc/: index.html
wasm-doc/pkg/: README.md  sleek_ui_lib.d.ts  sleek_ui_lib_bg.wasm.d.ts
(+92 files in other folders)
