[package]
name = "sleek-ui"
version = "1.0.0"
edition = "2024"

[lib]
name = "sleek_ui_lib"
path = "src/main.rs"
crate-type = ["cdylib"]

[dependencies]
dotenv = "0.15.0"

# Use skia renderer on all platforms but wasm as it is not supported. 
[target.'cfg(not(target_family = "wasm"))'.dependencies]
slint = { version = "1.14.1", features = ["renderer-skia", "live-preview"] }
open = "5.3.3"

[target.'cfg(target_family = "wasm")'.dependencies]
slint = { version = "1.14.1" }
wasm-bindgen = { version = "0.2" }

[build-dependencies]
slint-build = "1.14.1"

[profile.dev]
incremental = true

# Applying the profile release on wasm causes an error during build.
[target.'cfg(not(target_family = "wasm"))'.profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
