[package]
name = "SleekUI"
description = "A widgets library made with/for Slint based on Ant Design."
version = "1.4.0"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/uAtomicBoolean/SleekUI"

[lib]
name = "sleek_ui_lib"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "sleek-ui"
path = "src/main.rs"

[dependencies]
webbrowser = { version = "1.0.6", features = ["hardened"] }

# Use skia renderer on all platforms but wasm as it is not supported. 
[target.'cfg(not(target_family = "wasm"))'.dependencies]
slint = { version = "1.15.0", features = ["renderer-skia"] }

[target.'cfg(target_family = "wasm")'.dependencies]
slint = { version = "1.15.0" }
wasm-bindgen = { version = "0.2" }

[build-dependencies]
slint-build = "1.15.0"

[profile.dev]
incremental = true

# Applying the profile release on wasm causes an error during build.
[target.'cfg(not(target_family = "wasm"))'.profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
